apps/blog/environments/manifest.yaml
---
# Source: homelab/charts/blog/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-dev
  labels:
    helm.sh/chart: blog-0.1.6
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
---
# Source: homelab/charts/blog/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-dev
  labels:
    helm.sh/chart: blog-0.1.6
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
      app.kubernetes.io/instance: blog
  template:
    metadata:
      labels:
        helm.sh/chart: blog-0.1.6
        app.kubernetes.io/name: blog
        app.kubernetes.io/instance: blog
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: blog-dev
      securityContext:
        {}
      containers:
        - name: blog
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/kdwils/blog:1.0.7"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: cache
            - mountPath: /var/run
              name: run
      volumes:
        - emptyDir: {}
          name: cache
        - emptyDir: {}
          name: run
---
# Source: homelab/charts/blog/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-dev
  labels:
    helm.sh/chart: blog-0.1.6
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "blog.int.kyledev.co"
    - "blog.ts.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: blog-dev
        port: 8080
